--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/diary"]
 	path = themes/diary
 	url = https://github.com/AmazingRise/hugo-theme-diary
+[submodule "themes/anadole"]
+	path = themes/anadole
+	url = https://github.com/lxndrblz/anatole
