--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,6 @@
-theme = 'paper'
+theme = 'diary'
+title = "Jool's Site"
 disqusShortname = 'Jool'
-
+[params]
+  author = "Jool"
+  description = "Jool's Cool Site"
