--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/anatole"]
 	path = themes/anatole
 	url = https://github.com/lxndrblz/anatole
+[submodule "themes/feelit"]
+	path = themes/feelit
+	url = https://github.com/khusika/FeelIt
