modified:   .gitmodules 	renamed:    content/posts/intro.md -> content/about/intro.md 	modified:   hugo.toml 	new file:   resources/_gen/assets/scss/css/home.scss_1789054a1dedf2d96c965c6cb973353b.content 	new file:   resources/_gen/assets/scss/css/home.scss_1789054a1dedf2d96c965c6cb973353b.json 	new file:   resources/_gen/assets/scss/css/page.scss_f374f36b930c0c818f40c030de96c07e.content 	new file:   resources/_gen/assets/scss/css/page.scss_f374f36b930c0c818f40c030de96c07e.json 	deleted:    themes/feelit 	modified:   themes/anatole (untracked content)

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,30 @@
-theme = 'diary'
+theme = 'anatole'
 title = "Jool's Site"
 disqusShortname = 'Jool'
+defaultContentLanguage = "en"
+languageCode = "en"
+profilePicture = "images/profile.png"
+
 [params]
   author = "Jool"
   description = "Jool's Cool Site"
+
+[menu]
+
+	[[menu.main]]
+	name = "Home"
+	identifier = "home"
+	weight = 100
+	url = "/"
+
+	[[menu.main]]
+	name = "Posts"
+	weight = 200
+	identifier = "posts"
+	url = "/posts/"
+
+	[[menu.main]]
+	name = "About"
+	weight = 300
+	identifier = "about"
+	url = "/about/"
