modified:   config.toml 	modified:   hugo.toml 	new file:   images/profile.jpg 	new file:   static/favicons/favicon.png 	deleted:    static/foo

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,5 @@ baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'Jool Site'
 theme = 'paper'
+[params]
+profilePicture = "images/profile.jpg"
