modified:   README.md 	modified:   hugo.toml 	modified:   public/404.html 	new file:   public/about/index.html 	new file:   public/about/index.xml 	new file:   public/about/intro/index.html 	modified:   public/categories/index.html 	modified:   public/categories/index.xml 	new file:   public/css/markupHighlight.min.73ccfdf28df555e11009c13c20ced067af3cb021504cba43644c705930428b00.css 	renamed:    static/favicons/favicon.png -> public/favicons/favicon.png 	new file:   public/fontawesome/css/brands.min.9ed75a5d670c953fe4df935937674b4646f92674367e9e66eb995bb04e821647.css 	new file:   public/fontawesome/css/fontawesome.min.7d272de35b410fb165377550cdf9c4d3a80fbbcc961e111914e4d5c0eaf5729f.css 	new file:   public/fontawesome/css/regular.min.a7448d02590b43449364b6b5922ed9af5410abb4de4238412a830316dedb850b.css 	new file:   public/fontawesome/css/solid.min.55d8333481b07a08e07cf6f37319753a2b47e99f4c395394c5747b48b495aa9b.css 	new file:   public/fontawesome/webfonts/fa-brands-400.ttf 	new file:   public/fontawesome/webfonts/fa-brands-400.woff2 	new file:   public/fontawesome/webfonts/fa-regular-400.ttf 	new file:   public/fontawesome/webfonts/fa-regular-400.woff2 	new file:   public/fontawesome/webfonts/fa-solid-900.ttf 	new file:   public/fontawesome/webfonts/fa-solid-900.woff2 	modified:   public/index.html 	modified:   public/index.xml 	new file:   public/js/anatole-header.min.f9132794301a01ff16550ed66763482bd848f62243d278f5e550229a158bfd32.js 	new file:   public/js/anatole-theme-switcher.min.d6d329d93844b162e8bed1e915619625ca91687952177552b9b3e211014a2957.js 	new file:   public/js/medium-zoom.min.1248fa75275e5ef0cbef27e8c1e27dc507c445ae3a2c7d2ed0be0809555dac64.js 	modified:   public/posts/index.html 	modified:   public/posts/index.xml 	new file:   public/posts/youtubeinactivity/index.html 	new file:   public/scss/main.min.1147aa5bacb4bce677a0e264073829caedb82fd18ea07a5f1d80521f539d1c45.css 	modified:   public/sitemap.xml 	modified:   public/tags/index.html 	modified:   publi

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,7 +5,7 @@ languageCode = "en"
 [params]
 author = "Jool"
 description = "Jool's Cool Site"
-profilePicture = "images/profile.jpg"
+profilePicture = "images/profile.png"
 title = "Jool's Site"
 
 [[params.socialIcons]]
@@ -19,7 +19,7 @@ title = "GitHub"
 url = "https://github.com/Jool402"
 
 [[params.socialIcons]]
-icon = "fas fa-hashtag"
+icon = "fa-thin fa-m"
 title = "Matrix"
 url = "https://matrix.to/#/@jool4832:matrix.org"
 
