--- a/hugo.toml
+++ b/hugo.toml
@@ -14,6 +14,11 @@ title = "YouTube"
 url = "https://www.youtube.com/channel/UCNYA6ENeBhAX--OFFIQWDeQ"
 
 [[params.socialIcons]]
+icon = "fab fa-twitch"
+title = "Twitch"
+url = "https://www.twitch.tv/jool4832"
+
+[[params.socialIcons]]
 icon = "fab fa-github"
 title = "GitHub"
 url = "https://github.com/Jool402"
