--- a/hugo.toml
+++ b/hugo.toml
@@ -31,7 +31,7 @@ url = "https://matrix.to/#/@jool4832:matrix.org"
 [[params.socialIcons]]
 icon = "fas fa-envelope"
 title = "e-mail"
-url = "mailto:proton.h0pmk@aleeas.com"
+url = "mailto:best_hope342@twilightbunker.maskmy.id"
 
 [menu]
 
