--- a/hugo.toml
+++ b/hugo.toml
@@ -33,6 +33,10 @@ icon = "fas fa-envelope"
 title = "e-mail"
 url = "mailto:best_hope342@twilightbunker.maskmy.id"
 
+[services]
+  [services.disqus]
+    shortname = 'Jool'
+
 [menu]
 
 	[[menu.main]]
