modified:   .gitmodules 	deleted:    config.toml 	deleted:    content/about/intro.md 	modified:   hugo.toml 	modified:   public/404.html 	modified:   public/about/index.html 	modified:   public/about/index.xml 	modified:   public/about/intro/index.html 	modified:   public/categories/index.html 	modified:   public/categories/index.xml 	modified:   public/index.html 	modified:   public/index.xml 	modified:   public/posts/customizing-the-kde-plasma/index.html 	modified:   public/posts/distroreview/index.html 	modified:   public/posts/futo-keyboard-review/index.html 	modified:   public/posts/index.html 	modified:   public/posts/index.xml 	modified:   public/posts/intro/index.html 	modified:   public/posts/linux-mint-upgrade-on-athlon-pc/index.html 	modified:   public/sitemap.xml 	modified:   public/tags/index.html 	modified:   public/tags/index.xml 	new file:   themes/hugo-PaperMod 	content/posts/intro.md 	public/assets/ 	public/intro/

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,8 @@
-theme = 'paper'
+theme = 'hugo-PaperMod'
 defaultContentLanguage = "en"
-languageCode = "en"
+canonifyURLs = true
+title = 'Jool Site'
+languageCode = 'en'
 
 [params]
 author = "Jool"
