modified:   .gitmodules 	modified:   hugo.toml 	modified:   public/404.html 	modified:   public/categories/index.html 	modified:   public/categories/index.xml 	modified:   public/categories/page/1/index.html 	modified:   public/index.html 	modified:   public/index.xml 	modified:   public/page/1/index.html 	modified:   public/posts/customizing-the-kde-plasma/index.html 	modified:   public/posts/distroreview/index.html 	modified:   public/posts/futo-keyboard-review/index.html 	modified:   public/posts/index.html 	modified:   public/posts/index.xml 	modified:   public/posts/intro/index.html 	modified:   public/posts/linux-mint-upgrade-on-athlon-pc/index.html 	modified:   public/posts/page/1/index.html 	modified:   public/sitemap.xml 	modified:   public/tags/index.html 	modified:   public/tags/index.xml 	modified:   public/tags/page/1/index.html 	new file:   themes/hugo-PaperMod

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "themes/anatole"]
 	path = themes/anatole
 	url = https://github.com/lxndrblz/anatole
+[submodule "themes/--force"]
+	path = themes/--force
+	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/hugo-PaperMod"]
+	path = themes/hugo-PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod.git
