modified:   hugo.toml 	modified:   public/404.html 	modified:   public/categories/index.html 	modified:   public/categories/index.xml 	modified:   public/categories/page/1/index.html 	modified:   public/index.html 	modified:   public/index.xml 	modified:   public/page/1/index.html 	modified:   public/posts/customizing-the-kde-plasma/index.html 	modified:   public/posts/distroreview/index.html 	modified:   public/posts/futo-keyboard-review/index.html 	modified:   public/posts/index.html 	modified:   public/posts/index.xml 	modified:   public/posts/intro/index.html 	modified:   public/posts/linux-mint-upgrade-on-athlon-pc/index.html 	modified:   public/posts/page/1/index.html 	modified:   public/sitemap.xml 	modified:   public/tags/index.html 	modified:   public/tags/index.xml 	modified:   public/tags/page/1/index.html

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,38 +1,13 @@
-theme = 'paper'
+theme = 'hugo-PaperMod'
 title = 'Jool Site'
 languageCode = 'en'
-baseURL = 'https://jool402.github.io/joolsite/'
+baseURL = 'https://example.com/'
 
 [params]
 author = "Jool"
 description = "Site made by Jool"
 profilePicture = "images/profile.png"
 title = "Kerbsite"
-
-[[params.socialIcons]]
-icon = "fab fa-youtube"
-title = "YouTube"
-url = "https://www.youtube.com/channel/UCNYA6ENeBhAX--OFFIQWDeQ"
-
-[[params.socialIcons]]
-icon = "fab fa-twitch"
-title = "Twitch"
-url = "https://www.twitch.tv/jool4832"
-
-[[params.socialIcons]]
-icon = "fab fa-github"
-title = "GitHub"
-url = "https://github.com/Jool402"
-
-[[params.socialIcons]]
-icon = "fa-thin fa-m"
-title = "Matrix"
-url = "https://matrix.to/#/@jool4832:matrix.org"
-
-[[params.socialIcons]]
-icon = "fas fa-envelope"
-title = "e-mail"
-url = "mailto:best_hope342@twilightbunker.maskmy.id"
 
 [services]
   [services.disqus]
