modified:   hugo.toml 	modified:   public/404.html 	modified:   public/categories/index.html 	modified:   public/categories/index.xml 	modified:   public/index.html 	modified:   public/index.xml 	modified:   public/page/1/index.html 	modified:   public/posts/customizing-the-kde-plasma/index.html 	modified:   public/posts/distroreview/index.html 	modified:   public/posts/futo-keyboard-review/index.html 	modified:   public/posts/index.html 	modified:   public/posts/index.xml 	modified:   public/posts/intro/index.html 	modified:   public/posts/linux-mint-upgrade-on-athlon-pc/index.html 	modified:   public/posts/page/1/index.html 	modified:   public/sitemap.xml 	modified:   public/tags/index.html 	modified:   public/tags/index.xml 	renamed:    content/posts/images/futo-keyboard-screenshot.png -> static/images/futo-keyboard-screenshot.png 	renamed:    content/posts/images/lyrab-desktop-screenshot.png -> static/images/lyrab-desktop-screenshot.png 	renamed:    content/posts/images/profile.png -> static/images/profile.png

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 theme = 'hugo-PaperMod'
 title = 'Jool Site'
 languageCode = 'en'
-baseURL = 'https://example.com/'
+baseURL = 'https://jool402.github.io/joolsite/'
 
 [params]
 author = "Jool"
