modified:   content/posts/distroreview.md 	modified:   hugo.toml 	modified:   public/en/sitemap.xml 	modified:   public/es/index.html 	modified:   public/es/index.xml 	modified:   public/es/posts/customizing-the-kde-plasma/index.html 	modified:   public/es/posts/index.html 	modified:   public/es/posts/index.xml 	modified:   public/es/posts/intro/index.html 	modified:   public/es/posts/linux-mint-upgrade-on-athlon-pc/index.html 	modified:   public/es/sitemap.xml 	modified:   public/posts/linux-mint-upgrade-on-athlon-pc/index.html

--- a/hugo.toml
+++ b/hugo.toml
@@ -27,7 +27,7 @@ email = "dqz8grpl9@mozmail.com"
 	weight = 2
 
 	[languages.fr]
-	disabled = true
+	disabled = false
 	languageName = "French"
 	languageDirection = "ltr"
 	weight = 3
